<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">subjest</string>
    <string name="title_activity_public_chat">Public Chat</string>
    <string name="title_activity_connect_facebook">Connect Facebook</string>
    <string name="app_id">750337081751649</string>
    <string name="location_not_found">Your location has not been found.\nPlease try again.</string>
    <string name="no_network">No network is available.\nPlease try again later.</string>
    <string name="lost_connectivity">You are currently disconnected</string>
    <string name="server_error">There was an error during authentification.\nPlease try again later.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="reply">Reply</string>
    <string name="options">Options</string>
    <string name="title_activity_private_chat">Private Chat</string>
    <string name="title_activity_slideshow">SlideshowActivity</string>
    <string name="authenticating">Authenticating...</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="topics">Topics</string>
    <string name="private_message">Private Messages</string>
    <string name="delete_topic">Do you want to delete this topic?</string>
    <string name="delete_contact">Do you want to delete this contact?</string>
    <string name="delete_conversation">Do you want to delete this conversation?</string>
    <string name="hello_world">Hello World</string>
    <string name="audio_play">Play audio</string>
    <string name="audio_already_recording">Audio recording is not available at the moment</string>
    <string name="audio_error_recording">An error has happened during recording</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_on_mention">Notifications On Mention</string>
    <string name="fetch_all_messages">Fetch all messages instead\nof last 20 messages</string>
    <string name="username">Username</string>
    <string name="avatar">Avatar</string>
    <string name="conversations">Conversations</string>
    <string name="profile">Profile</string>
    <string name="change_picture">Change Avatar</string>
    <string name="change_username">Change Username</string>
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="dialog_pm">PM</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="network">Network</string>
    <string name="take_picture">Capture picture</string>
    <string name="pick_picture">Picture from gallery</string>
    <string name="take_video">Capture video</string>
    <string name="pick_video">Video from gallery</string>
    <string name="file_transfer">Share</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="enter_username">Enter your new username</string>
    <string name="generate">Generate new avatar</string>
    <string name="add_topic">Add topic</string>
    <string name="dialog_add_contact">Add contact</string>
    <string name="dialog_add_contact_pm">Add contact and PM</string>
    <string name="dialog_delete_message">Delete message</string>
    <string name="dialog_save_file">Save file</string>
    <string name="dialog_retry_message">Retry message</string>
    <string name="empty_privates">You currently don\'t have\nany conversations</string>
    <string name="empty_contacts">You currently don\'t have\nany contacts</string>
    <string name="empty_trending">There is no trending channels\nin this city.</string>
    <string name="send_message">Send message</string>
    <string name="create_single">Create a conversation</string>
    <string name="create_group">Create a group chat</string>
    <string name="done">Done</string>
    <string name="error_upload_avatar">Error when uploading picture</string>
    <string name="error_upload_username">Error when updating username</string>
    <string name="downloading_file">Downloading file...</string>
    <string name="location_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="no_channel_entered">Start to write to add channel</string>
    <string name="error_save_file">Error when saving file</string>
    <string name="success_save_file">Saved file</string>
    <string name="send_a_message">Send a message...</string>
    
    
    <string name="pull_to_refresh_pull_label">Pull to load more...</string>
    <string name="pull_to_refresh_release_label">Release to load more...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to load more...</string>

    <!-- SquareCamera -->

    <string name="action_settings">Settings</string>
    <string name="start_image_capture">Take New Picture!</string>
    <string name="capture_image">Snap It!</string>
    <string name="save_image">Save</string>
    <string name="swap_camera">Swap</string>
    <string name="flash">Flash</string>
    <string name="auto_flash">Auto Flash</string>
    <string name="no_flash">No Flash</string>
    <string name="recapture_image">Retake Picture</string>
    <string name="capturing_image">Taking New Picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blank">BlankActivity</string>

    <!-- End of SquareCamera -->

    <plurals name="users_connected">
        <item quantity="zero">No users connected</item>
        <item quantity="one">%d user connected</item>
        <item quantity="other">%d users connected</item>
    </plurals>

</resources>