<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color" >

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@drawable/gen_sel"
            android:padding="5dp"
            android:src="@drawable/navigation_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/back_btn"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/setting_notifications"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_sel"
            android:text="@string/notifications"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/grey" />

        <CheckBox
            android:id="@+id/setting_notifications_mention"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_sel"
            android:text="@string/notifications_on_mention"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>