<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/light_main_color"
    android:paddingBottom="5dp" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/file_transfer"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <View
        android:id="@+id/contact_info_sep"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/name"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_info_sep"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/capture_picture_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/take_picture"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pick_picture_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/pick_picture"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/capture_video_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/take_video"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pick_video_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/pick_video"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>