<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color" >

    <TextView
        android:id="@+id/username_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/avatar_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/avatar"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/avatar_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/avatar_bg"
        android:padding="10dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/change_picture"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/gen_black_sel"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/change_picture"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>