<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/light_main_color"
    android:paddingBottom="5dp" >

    <RelativeLayout
        android:id="@+id/contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/avatar_bg"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_centerHorizontal="true"
            android:text="Heavy Shoe"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:id="@+id/contact_info_sep"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/contact_info"
        android:layout_marginTop="10dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_info_sep"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/add_contact_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dialog_add_contact"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_contact_pm_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dialog_add_contact_pm"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pm_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dialog_pm"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/retry_message_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dialog_retry_message"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delete_message_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gen_black_sel" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dialog_delete_message"
                android:textColor="@color/dark_grey"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/gray" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>