<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/search_bar"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/main_color"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/main_color" >

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:background="@drawable/gen_sel"
                android:padding="5dp"
                android:src="@drawable/navigation_back" />

            <TextView
                android:id="@+id/channel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/back_btn"
                android:text="@string/hello_world"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/topBar"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_edittext_white"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textCapSentences"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:windowSoftInputMode="stateHidden" />

            <ImageView
                android:id="@+id/search_btn"
                android:layout_width="60dp"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/editText"
                android:layout_weight="1"
                android:background="@drawable/gen_sel"
                android:src="@drawable/search" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/currently_written"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_below="@id/search_bar"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/gen_sel"
        android:gravity="center_vertical"
        android:hint="@string/no_channel_entered"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/currently_written"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <ListView
            android:id="@+id/list_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <ProgressBar
            android:id="@+id/progress_trending"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/empty_trending"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>